feat(UserDashboard): Added the ability to add players to the "UserDashboard"